--- a/index.qmd
+++ b/index.qmd
@@ -4,13 +4,9 @@ title: "My website and data analysis portfolio"
 
 **Feel free to change the text below any way you want 😁!**
 
-# Hello
+## Welcome 👋
 
-### And hello again
+Welcome to **my website** and *data analysis portfolio.*
 
-Welcome to **my website** and _data analysis portfolio._ 
-
-
-* Please use the `Menu Bar` above to look around.
-* Have fun!
-
+-   Please use the `Menu Bar` above to look around.
+-   Have fun!
