--- a/aboutme.qmd
+++ b/aboutme.qmd
@@ -2,6 +2,12 @@
 title: "About me"
 ---
 
-Add some text and a figure describing myself.
-
-For details, see the instructions. 
+### Background and Training
+I am a **first-year PhD student in Health Services Research**, with a background in **statistics**.
+My academic training has provided me with experience in quantitative methods and data analysis, and I am particularly interested in applying these tools to real-world public health and policy questions.
+### Research Interests
+My research interests focus on **public health**, **healthcare access**, and **health policy equity**. I am especially interested in understanding how social, economic, and policy environments shape health outcomes and contribute to disparities across populations.
+### Data Analysis and Programming Experience
+I have previously used **R and Python** for data analysis and visualization. While I am still building confidence and fluency in these tools, I am comfortable working with data and eager to continue improving my programming and analytical skills.
+### Goals for This Course
+Through this course, I hope to strengthen my ability to conduct **reproducible data analyses**, gain more experience with modern data science tools, and further improve my proficiency in **R** for applied data analysis.
