--- a/aboutme.qmd
+++ b/aboutme.qmd
@@ -1,22 +1,26 @@
 ---
 title: "About me"
 ---
-![My photo](LiangLai.jpg)
+![](LiangLai.jpg){width=200px}
+
 ### Background and Training
 
 I am a **first-year PhD student in Health Services Research**, with a background in **statistics**.
 My academic training has provided me with experience in quantitative methods and data analysis, and I am particularly interested in applying these tools to real-world public health and policy questions.
+
 ### Research Interests
 
-My research interests focus on **public health**, **healthcare access**, and **health policy equity**. I am especially interested in understanding how social, economic, and policy environments shape health outcomes and contribute to disparities across populations.
+My research interests focus on **public health**, **healthcare access**, and **health policy**. I am especially interested in understanding how social, economic, and policy environments shape health outcomes and contribute to disparities across populations.
+
 ### Data Analysis and Programming Experience
 
 I have previously used **R and Python** for data analysis and visualization. While I am still building confidence and fluency in these tools, I am comfortable working with data and eager to continue improving my programming and analytical skills.
+
 ### Goals for This Course
 
 Through this course, I hope to strengthen my ability to conduct **reproducible data analyses**, gain more experience with modern data science tools, and further improve my proficiency in **R** for applied data analysis.
 
-### 🔗 A Dataset I Have Been Working With
+### A Dataset I Have Been Working With
 
 One dataset I have recently been working with is the **Health and Retirement Study (HRS)**, a nationally representative longitudinal survey of older adults in the United States.
 
