--- a/aboutme.qmd
+++ b/aboutme.qmd
@@ -1,12 +1,12 @@
 ---
 title: "About me"
 ---
-![](LiangLai.jpg){width=200px}
+
+![](LiangLai.jpg){width="200px"}
 
 ### Background and Training
 
-I am a **first-year PhD student in Health Services Research**, with a background in **statistics**.
-My academic training has provided me with experience in quantitative methods and data analysis, and I am particularly interested in applying these tools to real-world public health and policy questions.
+I am a **first-year PhD student in Health Services Research**, with a background in **statistics**. My academic training has provided me with experience in quantitative methods and data analysis, and I am particularly interested in applying these tools to real-world public health and policy questions.
 
 ### Research Interests
 
@@ -26,5 +26,5 @@ One dataset I have recently been working with is the **Health and Retirement Stu
 
 I have been using HRS in recent research related to **dementia**, which has made me particularly familiar with the structure and variables of the dataset. I find HRS especially valuable because it provides rich longitudinal information on health, socioeconomic status, and aging, allowing for applied statistical analyses that are directly relevant to public health and health policy questions.
 
-More information about the dataset can be found here:  
-[https://hrs.isr.umich.edu](https://hrs.isr.umich.edu)
+More information about the dataset can be found here:\
+<https://hrs.isr.umich.edu>
