--- a/data-exercise/data-exercise.qmd
+++ b/data-exercise/data-exercise.qmd
@@ -1,194 +1,116 @@
 ---
-title: "Future Exercise"
+title: "Data Exercise(Week4)"
 ---
 
-```{r package}
-# add package
-library("dslabs")
-library(dplyr)
-```
+Prompt Using the tidyverse package, write an R code to generate a synthetic dataset with N=1000. The research subjects are people over 50 years old. The dataset should include ID, age (ranging from 50 to 95, with more concentrated in the range of 55-75), gender, years of education, BMI (with an average of about 27 and a standard deviation of about 5), physical activity level, history of depression (about 15-20%), and the number of comorbidities such as diabetes and hypertension. The occurrence probability of comorbidities should increase with age and BMI. Moreover, depression is also related to dementia. It particularly emphasizes that age and depression are strong risk factors, higher education and higher physical activity have protective effects, diabetes and hypertension increase the risk, and BMI has a non-linear (U-shaped) relationship with the risk.
 
-```{r}
-# load data
-str(gapminder)
+```{r, echo=FALSE, message=FALSE}
+# 0) Load required packages
+library(tidyverse)
 
-# summary of data
-summary(gapminder)
+# 1) Reproducibility seed
+base::set.seed(1)
 
-# check type of data
-class(gapminder)
-```
+# 2) functions
+inv_logit <- function(x) 1 / (1 + base::exp(-x))
+clamp <- function(x, lower, upper) base::pmax(lower, base::pmin(x, upper))
 
-```{r}
-# creat aficadata
-africadata <- gapminder[gapminder$continent == "Africa", ]
+# 3) Sample size
+N <- 1000
 
-# check 
-str(africadata)
+# 4) Generate synthetic dataset
+synthetic_data <- tibble::tibble(
+  ID = base::sprintf("%05d", 1:N),
 
-# sum
-summary(africadata)
-```
+  # Age: 85% from truncated normal-like around 65, 15% from uniform tails
+  age = {
+    mix <- stats::rbinom(n = N, size = 1, prob = 0.85)
+    main <- clamp(stats::rnorm(n = N, mean = 65, sd = 7.5), 50, 95)
+    tail <- stats::runif(n = N, min = 50, max = 95)
+    base::as.integer(base::round(base::ifelse(mix == 1, main, tail)))
+  },
 
-```{r}
-#create two object
-af_mort_life <- africadata[,c("infant_mortality","life_expectancy")]
-af_pop_life <- africadata[,c("population","life_expectancy")]
+  # Gender: ~52% female
+  gender = {
+    g <- stats::rbinom(n = N, size = 1, prob = 0.52)
+    base::factor(base::ifelse(g == 1, "Female", "Male"), levels = c("Male", "Female"))
+  }
+) |>
+  dplyr::mutate(
+    # Education (years): mean ~13 with mild cohort effect (older -> slightly fewer years)
+    education_years = {
+      edu_base <- stats::rnorm(n = N, mean = 13, sd = 2.7)
+      edu <- clamp(edu_base - 0.03 * (age - 65), 0, 22)
+      base::as.integer(base::round(edu))
+    },
 
-# check
-str(af_mort_life)
-summary(af_mort_life)
+    # BMI: mean ~27 sd ~5, mild age pattern, clamped
+    BMI = {
+      bmi_base <- stats::rnorm(n = N, mean = 27, sd = 5)
+      bmi_val <- clamp(bmi_base + 0.03 * (pmin(age, 70) - 50), 15, 55)
+      base::round(bmi_val, 1)
+    },
 
-# check pop and life 
-str(af_pop_life)
-summary(af_pop_life)
-```
+    # Physical activity: ordered factor influenced by education (+) and age (-)
+    physical_activity = {
+      latent <- 0.12 * (education_years - 12) - 0.03 * (age - 65) + stats::rnorm(n = N)
+      pa <- base::cut(
+        latent,
+        breaks = c(-Inf, -0.4, 0.8, Inf),
+        labels = c("Low", "Moderate", "High"),
+        right = TRUE
+      )
+      base::factor(pa, levels = c("Low", "Moderate", "High"), ordered = TRUE)
+    },
 
-```{r plot}
-# Plot : Africa:Life expectancy vs infant mortality
-plot(
-    x = af_mort_life$infant_mortalit,
-    y = af_mort_life$life_expectancy,
-    xlab = "Infant mortality",
-    ylab = "Life expectancy",
-    pch = 16,
-    main = "Africa: Life expectancy vs infant mortality"
-)
-```
+    # Depression history: ~15–20% with links to age and physical activity
+    depression_history = {
+      lp <- -1.6 +
+        0.012 * (age - 65) +
+        0.25  * (physical_activity == "Low") -
+        0.10  * (physical_activity == "High") +
+        0.08  * (gender == "Female")
+      stats::rbinom(n = N, size = 1, prob = inv_logit(lp))
+    },
 
-The plot shows a clear negative relationship between infant mortality and life expectancy. Countries and years with higher infant mortality tend to have lower life expectancy.
+    # Diabetes and hypertension: probabilities increase with age and BMI
+    diabetes = {
+      lp <- -2.0 + 0.035 * (age - 65) + 0.070 * (BMI - 27) + 0.15 * (gender == "Male")
+      stats::rbinom(n = N, size = 1, prob = inv_logit(lp))
+    },
 
-```{r}
-# Plot life expectancy vs population
-plot(
-    x = af_pop_life$population,
-    y = af_pop_life$life_expectancy,
-    xlab = "Population (log scale)",
-    ylab = "Life expectancy",
-    pch = 16,
-    main = "Africa: Life expectancy vs population",
-    log = "x" 
-)
-```
+    hypertension = {
+      lp <- -1.0 + 0.050 * (age - 65) + 0.040 * (BMI - 27) + 0.10 * (gender == "Male")
+      stats::rbinom(n = N, size = 1, prob = inv_logit(lp))
+    },
 
-In this plot, we can see distinct ‘streaks’ of data. When examining each streak separately, both population size and life expectancy appear to increase together. From the data, we can know these streaks represent repeated observations of the same country across different years. Over time, countries tend to experience population growth along with improvements in life expectancy.
+    # Number of comorbidities (0,1,2) among diabetes + hypertension
+    n_comorbidities = diabetes + hypertension,
 
-```{r}
-# find the year with missing data
-africadata %>% 
-  filter(is.na(infant_mortality)) %>% 
-  count(year)
-```
+    # Dementia (0/1): age & depression strong risk; edu & PA protective;
+    # diabetes & hypertension risk; BMI U-shaped via quadratic term
+    dementia = {
+      bmi_u <- ((BMI - 27)^2) / 25
+      lp <- -3.2 +
+        0.075 * (age - 65) +
+        0.85  * depression_history +
+        (-0.08) * (education_years - 13) +
+        (-0.25) * (physical_activity == "Moderate") +
+        (-0.50) * (physical_activity == "High") +
+        0.45  * diabetes +
+        0.35  * hypertension +
+        0.55  * bmi_u
+      stats::rbinom(n = N, size = 1, prob = inv_logit(lp))
+    },
 
-From 1960 to 1981 and in 2016, there were missing values in the data.
-
-```{r}
-# choose year = 2000 in Africa data
-af_2000 <- africadata[africadata$year == 2000, ]
-
-# check 
-str(af_2000)
-summary(af_2000)
-```
-
-```{r}
-# Create Plot in 2000
-# Plot: life expectancy vs infant mortality (2000)
-plot(
-  x = af_2000$infant_mortality,
-  y = af_2000$life_expectancy,
-  xlab = "Infant mortality",
-  ylab = "Life expectancy",
-  pch = 16,
-  main = "Africa 2000: Life expectancy vs Infant Mortality"
-)
-
-# Plot: life expectancy vs population (2000)
-plot(
-  x = af_2000$infant_mortality,
-  y = af_2000$life_expectancy,
-  xlab = "Population (log scale)",
-  ylab = "Life expectancy",
-  pch = 16,
-  main = "Africa 2000: Life expectancy vs Population",
-  log = "x"
-)
-```
-
-When restricting the data to the 2000 year, It seems like there are still the negative relationship bewteen infant mortality and life expectancy in the first graph. However, we can't find the streaks observed earlier. There is no clear association between population size and life expectancy within the year 2000.
-
-```{r reg}
-# Fit a linear model 
-# linear model life_expectancy vs infant_mortality 
-fit1 <- lm(life_expectancy ~ infant_mortality, data = af_2000)
-
-# display summary about fit1
-summary(fit1)
-
-# linear model life_expectancy vs population
-fit2 <- lm(life_expectancy ~ population, data = af_2000) 
-
-# display summary about fit2
-summary(fit2)
-```
-
-From the result in fit1, in 2000, the infant mortality rate in African countries was significantly negatively correlated with life expectancy (p < 0.001). For every 1 unit increase in the infant mortality rate, the life expectancy was expected to decrease by approximately 0.19 years. 
-From the result in fit2, in 2000, there was no significant correlation between the population size of African countries and their life expectancy (p = 0.616). Changes in population size were unable to effectively predict the level of life expectancy in these countries. In contrast, infant mortality rate was a more crucial predictive factor.
-
-
-## Additional Data Exploration  
-*This section contributed by Saraa Al Jawad*
-
-In this section we explore another dataset following similar steps above:
-
-```{r}
-library(dslabs)
-library(dplyr)
-library(ggplot2)
-
-data(heights)
-
-# Explore dataset structure
-
-glimpse(heights)
-summary(heights)
-
-
-heights_clean <- heights %>%
-filter(!is.na(height), !is.na(sex))
-
-# Quick check
-
-table(heights_clean$sex)
-
-
-ggplot(heights_clean, aes(x = height)) +
-geom_histogram(bins = 25) +
-facet_wrap(~ sex) +
-labs(
-title = "Height distribution by sex",
-x = "Height (inches)",
-y = "Count"
-)
-
-
-ggplot(heights_clean, aes(x = sex, y = height)) +
-geom_boxplot() +
-labs(
-title = "Height by sex",
-x = "Sex",
-y = "Height (inches)"
-)
+    # Optional BMI category (interpretability)
+    BMI_category = base::cut(
+      BMI,
+      breaks = c(-Inf, 18.5, 25, 30, Inf),
+      labels = c("Under/Low", "Normal", "Overweight", "Obese"),
+      right = FALSE
+    )
+  )
 
 ```
 
-# simple statistical model (linear model)
-
-
-```{r}
-fit_height <- lm(height ~ sex, data = heights_clean)
-summary(fit_height)
-
-```
-
-The linear model shows that sex is a statistically significant predictor of height (p < 0.001). On average, males are estimated to be approximately 4.4 inches taller than females in this dataset. 
