--- a/data-exercise/data-exercise.qmd
+++ b/data-exercise/data-exercise.qmd
@@ -2,12 +2,20 @@
 title: "Data Exercise(Week4)"
 ---
 
-Prompt Using the tidyverse package, write an R code to generate a synthetic dataset with N=1000. The research subjects are people over 50 years old. The dataset should include ID, age (ranging from 50 to 95, with more concentrated in the range of 55-75), gender, years of education, BMI (with an average of about 27 and a standard deviation of about 5), physical activity level, history of depression (about 15-20%), and the number of comorbidities such as diabetes and hypertension. The occurrence probability of comorbidities should increase with age and BMI. Moreover, depression is also related to dementia. It particularly emphasizes that age and depression are strong risk factors, higher education and higher physical activity have protective effects, diabetes and hypertension increase the risk, and BMI has a non-linear (U-shaped) relationship with the risk.
+# Option2: Synthetic Data Generation and Exploartion 
+
+## Generate synthetic Data : 
+* In this section, I generate a synthetic dataset (N=1000) representing an older adult population (50+). 
+The underlying logic includes:
+1.  Age & Depression: Strong risk factors for dementia.
+2.  Education & Physical Activity: Protective factors.
+3.  Comorbidities (Diabetes/Hypertension): Driven by Age and BMI.
+4.  BMI & Dementia: A U-shaped relationship(both underweight and obese increase risk).
 
 ```{r, echo=FALSE, message=FALSE}
 # 0) Load required packages
 library(tidyverse)
-
+library(ggplot2)
 # 1) Reproducibility seed
 base::set.seed(1)
 
@@ -101,16 +109,77 @@ synthetic_data <- tibble::tibble(
         0.35  * hypertension +
         0.55  * bmi_u
       stats::rbinom(n = N, size = 1, prob = inv_logit(lp))
-    },
-
-    # Optional BMI category (interpretability)
-    BMI_category = base::cut(
-      BMI,
-      breaks = c(-Inf, 18.5, 25, 30, Inf),
-      labels = c("Under/Low", "Normal", "Overweight", "Obese"),
-      right = FALSE
-    )
+    }
   )
-
 ```
 
+# Exploration with plots
+
+```{r} 
+# Summary statistics
+summary(synthetic_data)
+str(synthetic_data)
+```
+
+## Age distribution 
+From the histogram, it can be seen that the age range is mainly concentrated between 55 and 75.
+```{r}
+ggplot(synthetic_data, aes(age)) +
+  geom_histogram(bins = 30) +
+  labs(title = "Age distribution", x = "Age", y = "Count")
+```
+
+## BMI distribution
+From the histogram, it can be seen that the BMI range is mainly concentrated between 25 and 30.
+```{r}
+ggplot(synthetic_data, aes(BMI)) +
+  geom_histogram(bins = 30) +
+  labs(title = "BMI distribution", x = "BMI", y = "Count")
+```
+
+## Age trend with Dementia
+The smooth curve shows the trend of dementia probability increasing with age, which is as expected, as age was deliberately made a significant risk factor in the data generation process.
+```{r}
+ggplot(synthetic_data, aes(x = age, y = dementia)) +
+  geom_smooth(method = "loess", color = "blue") + 
+  labs(title = "Dementia Risk increases with Age", y = "Probability")
+```
+
+## Check BMI with dementia
+The curve indicates a non-linear relationship between BMI and the risk of dementia. Its shape conforms to the expected U-shaped association, where the risk increases both when BMI is low and when it is high.
+```{r}
+ggplot(synthetic_data, aes(x = BMI, y = dementia)) +
+  geom_smooth(method = "loess") +
+  labs(title = "U-shaped BMI relationship with dementia risk", x = "BMI", y = "Probability (loess-smoothed)")
+```
+
+# Fit model 
+## Model 1: logistic regression 
+From the results,
+```{r}
+m1 <- glm(
+  dementia ~ age + depression_history + education_years + physical_activity +
+    diabetes + hypertension + BMI,
+  data = synthetic_data,
+  family = binomial()
+)
+summary(m1)
+exp(coef(m1))
+```
+
+## # Model 2: logistic regression + bmi^2
+```{r}
+m2 <- glm(
+  dementia ~ age + depression_history + education_years + physical_activity +
+    diabetes + hypertension + BMI + I(BMI^2),
+  data = synthetic_data,
+  family = binomial()
+)
+summary(m2)
+exp(coef(m2))
+# check model 
+AIC(m1, m2)
+```
+
+# Conclusion
+From the results, it can be seen that in both models, the risk of dementia increases with age and depression, while the risks of diabetes and hypertension increase. Adding the secondary BMI term significantly improves the model's fit and confirms the expected non-linear (U-shaped) relationship between BMI and the risk of dementia.
